--- a/Team9/Team9.csproj
+++ b/Team9/Team9.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Messaging\EmailMessage.cs" />
     <Compile Include="Migrations\201611241826196_Team9.1.cs" />
     <Compile Include="Migrations\201611241826196_Team9.1.Designer.cs">
       <DependentUpon>201611241826196_Team9.1.cs</DependentUpon>
@@ -308,6 +309,7 @@
     <Content Include="Views\Purchases\AlbumReport.cshtml" />
     <Content Include="Views\Purchases\MyMusicDetailedSearch.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Purchases\Refund.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
