--- a/Team9/Web.config
+++ b/Team9/Web.config
@@ -7,10 +7,11 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
 
   <connectionStrings>
-    <add name="MyDBConnection" connectionString="Server=tcp:kengotthw3.database.windows.net,1433;          Initial Catalog=Team9;Persist Security Info=False;          User ID=kengottadmin;Password=password123!;MultipleActiveResultSets=True;          Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="MyDBConnection" connectionString="Server=tcp:maxrank.database.windows.net,1433;Initial Catalog=Team9FINALDATABASE;Persist Security Info=False;User ID=maxrank;Password=password123!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
 
@@ -56,13 +57,13 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v13.0" />
-      </parameters>
-    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="MyDbConnection" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
 </configuration>
