--- a/Team9/Team9.csproj
+++ b/Team9/Team9.csproj
@@ -277,6 +277,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Purchases\Refund.cshtml" />
     <Content Include="Views\Purchases\GenreReport.cshtml" />
+    <Content Include="Views\Home\manageCustomers.cshtml" />
+    <Content Include="Views\Home\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
